5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1642_2449.log
== TEST (2019-04-15 13:36:48) 
-- CODE:
a = float(input("Digite um numero: "))
b = float(input("Digite um numero: "))
c = float(input("Digite um numero: "))
d = float(input("Digite um numero: "))
e = float(input("Digite um numero: "))
f = float(input("Digite um numero: "))

g = (c*e) - (b*f)
h = (a*e) - (b*d)
i = (a*f) - (c*d)

if (g, h, i) =!0 :
	x = g/h
	y = i/h
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 12
    if (g, h, i) =!0 :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:37:46) 
-- CODE:
a = float(input("Digite um numero: "))
b = float(input("Digite um numero: "))
c = float(input("Digite um numero: "))
d = float(input("Digite um numero: "))
e = float(input("Digite um numero: "))
f = float(input("Digite um numero: "))

g = (c*e) - (b*f)
h = (a*e) - (b*d)
i = (a*f) - (c*d)

if h =!0 :
	x = g/h
	y = i/h
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 12
    if h =!0 :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:00) 
-- CODE:
a = float(input("Digite um numero: "))
b = float(input("Digite um numero: "))
c = float(input("Digite um numero: "))
d = float(input("Digite um numero: "))
e = float(input("Digite um numero: "))
f = float(input("Digite um numero: "))

g = (c*e) - (b*f)
h = (a*e) - (b*d)
i = (a*f) - (c*d)

if h != 0 :
	x = g/h
	y = i/h
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:38:20) 
-- CODE:
a = float(input("Digite um numero: "))
b = float(input("Digite um numero: "))
c = float(input("Digite um numero: "))
d = float(input("Digite um numero: "))
e = float(input("Digite um numero: "))
f = float(input("Digite um numero: "))

g = (c*e) - (b*f)
h = (a*e) - (b*d)
i = (a*f) - (c*d)

if h != 0 :
	x = g/h
	y = i/h
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.12698
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
